fixed the location issue
Added some CSS in the location section to make it more align

--- a/style.css
+++ b/style.css
@@ -450,6 +450,18 @@ u {
   color: #fff;
   background: rgb(65, 65, 65);
 }
+/* ....../Location/ ......*/
+#location iframe {
+  margin-left: 400px;
+  width:40%;
+  margin-top: 5px;
+  
+}
+#location p{
+  margin-left: 5px;
+  margin-top: 2.5px;
+  margin-left: 400px;
+}
 
 /* ......../ media query /.......... */
 
