changed the footer colour to green\

--- a/style.css
+++ b/style.css
@@ -685,7 +685,7 @@ u {
 }
 /*footer section*/
 #footer {
-  background: #17069a;
+  background: #20bc7e;
  
   margin-top: 30px;
   padding: 40px 0;
