--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ u {
   background: #fff;
   color: #000;
   opacity: 0.85;
-  height: 50px;
+  height: 60px;
   z-index: 12;
 }
 
@@ -97,7 +97,12 @@ u {
   font-weight: 500;
   transition: color 0.3s ease-in-out;
 }
-
+.menu-items img{
+   height:40px;
+   width:80px;
+   margin-left: 25px;
+   margin-right: 10px;
+}
 .menu-items a:hover {
   color: #117964;
   transition: color 0.3s ease-in-out;
