--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: var(--background-color4);
+  /* background-color: white; */
+  /* color: black;
+   */
+   color: var(-secondary-color1);
 }
 
 u {
@@ -65,8 +70,11 @@ u {
   box-shadow: 0px 5px 10px 0px #aaa;
   position: fixed;
   width: 100%;
-  background: #fff;
-  color: #000;
+  background: var(--background-color1);
+  /* background: #fff; */
+  /* color: #000;
+   */
+   color: var(--secondary-color2);
   opacity: 0.85;
   height: 50px;
   z-index: 12;
@@ -93,7 +101,8 @@ u {
 
 .menu-items a {
   text-decoration: none;
-  color: #444;
+  /* color: #444; */
+  color: var(  --secondary-color3);
   font-weight: 500;
   transition: color 0.3s ease-in-out;
 }
@@ -139,7 +148,12 @@ u {
 
 #about {
   padding: 50px 0;
-  background: #f5f5f7;
+  background: var( --background-color2);
+
+  /* background: #f5f5f7; */
+  /* color: #000;
+   */
+   color: var( --secondary-color2);
 }
 
 .about-wrapper {
@@ -153,12 +167,14 @@ u {
 
 #about p {
   font-size: 1.2rem;
-  color: #555;
+  /* color: #555; */
+  color: var( --secondary-color4);
 }
 
 #about .small {
   font-size: 1.2rem;
-  color: #666;
+  /* color: #666; */
+  color: var( --secondary-color5);
   font-weight: 600;
 }
 
@@ -210,7 +226,8 @@ u {
   font-weight: 400;
   margin-bottom: 40px;
   text-transform: uppercase;
-  color: #555;
+  /* color: #555; */
+  color: var( --secondary-color4);
 }
 
 /* .food-container {
@@ -320,7 +337,8 @@ u {
 .prev:hover,
 .next:hover {
 
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var( --background-color3);
+  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .fade {
@@ -875,7 +893,7 @@ u {
 }
 
 .social-icons a {
-  background-color: #000000;
+  background-color: var(--primary-color);
   color: #d618e8;
   font-size: 16px;
   display: flex;
@@ -947,4 +965,46 @@ u {
     padding: 0;
   }
 
+}
+#icon{
+  width:25px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+:root{
+  --background-color1: #fff;
+  --background-color2: #f5f5f7;
+  --background-color3: rgba(0, 0, 0, 0.5);
+  --background-color4:white;
+  --secondary-color1:black;
+  --secondary-color2:#000;
+  --secondary-color3: #444;
+  --secondary-color4:#555;
+  --secondary-color5: #666;
+  --secondary-color6:#000;
+}
+
+.dark-theme{
+  --background-color1:#000;
+  --background-color2:#000;
+  --background-color3:white;
+  --background-color4:black;
+  --secondary-color1:white;
+  --secondary-color2:#fff;
+  --secondary-color3:#444;
+  --secondary-color4:#555;
+  --secondary-color5:#666;
+  --secondary-color6:#7b5c5c;
+}
+
+
+#para{
+  color:var( --secondary-color1) ;
+}
+#salted{
+  color:var(--secondary-color6);
+}
+#pencil{
+  color: var(--secondary-color6);
 }
