--- a/cart.css
+++ b/cart.css
@@ -965,6 +965,8 @@ hr {
   --background-color5: #20bc7e;
   --background-color6: #fff;
   --background-color7: #333;
+    --new-color:rgb(124, 5, 5);
+    --new-color1:black;
 
 }
 
@@ -986,6 +988,8 @@ hr {
   --background-color5: #2b2929;
   --background-color6: black;
   --background-color7: white;
+  --new-color:rgb(223, 107, 107);
+  --new-color1:whitesmoke;
 
 }
 
@@ -1016,4 +1020,37 @@ hr {
 
 .food-titile {
   color: var(--primary-color3);
+}
+#abtus .aboutus h1 {
+  text-align: center;
+  margin:  auto;
+}
+#abtus .aboutus h1 span {
+  font-size: 4.5rem;
+  /* color: rgb(124, 5, 5); */
+  color: var(--new-color);
+  padding: 5px 5px;
+  font-family: "Roboto";
+}
+hr{
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.abt_text{
+  margin: 0px 60px;
+  margin-bottom: 90px;
+  /* color: black; */
+  color: var(--new-color1);
+}
+.cart_online{
+  height: 270px;
+  width: 500px;
+  float: right;
+  border: 1px solid white;
+  border-radius: 20px;
+}
+.para_abt{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  line-height:30px ;
 }
