--- a/cart.css
+++ b/cart.css
@@ -966,7 +966,7 @@ hr {
   --background-color6: #fff;
   --background-color7: #333;
     --new-color:rgb(124, 5, 5);
-    --new-color1:black;
+    --new-color1:rgb(45, 42, 42);
 
 }
 
@@ -1037,20 +1037,57 @@ hr{
   margin-right: 100px;
 }
 .abt_text{
-  margin: 0px 60px;
-  margin-bottom: 90px;
+  display: flex;
+  margin: 0px 5%;
+  margin-bottom: -60px;
   /* color: black; */
   color: var(--new-color1);
+  width: 90%;
 }
 .cart_online{
   height: 270px;
-  width: 500px;
-  float: right;
+  width: 40%;
   border: 1px solid white;
   border-radius: 20px;
 }
+
 .para_abt{
   font-family: "Poppins", sans-serif;
-  font-size: 1.2rem;
-  line-height:30px ;
+  font-size: 1rem;
+  line-height:24px ;
+  width: 60%;
+}
+
+@media(max-width:430px){
+  .abt_text{
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+}
+.cart_online{
+  width: 100%;
+}
+.para_abt{
+  
+  font-size: 15px;
+  width: 80%;
+}
+}
+@media(max-width:768px){
+  .abt_text{
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+}
+.cart_online{
+  width: 70%;
+}
+.para_abt{
+  
+  font-size: 18px;
+  width: 80%;
+}
+
 }
