--- a/cart.css
+++ b/cart.css
@@ -863,6 +863,28 @@ hr {
   background-color: #007bb6
 }
 
+/* Scroll back button design */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+/* End */
 @media (max-width:767px) {
   .social-icons li.title {
     display: block;
@@ -965,8 +987,8 @@ hr {
   --background-color5: #20bc7e;
   --background-color6: #fff;
   --background-color7: #333;
-  --new-color:rgb(124, 5, 5);
-  --new-color1:rgb(45, 42, 42);
+  --new-color: rgb(124, 5, 5);
+  --new-color1: rgb(45, 42, 42);
 
 }
 
@@ -988,8 +1010,8 @@ hr {
   --background-color5: #2b2929;
   --background-color6: black;
   --background-color7: white;
-  --new-color:rgb(223, 107, 107);
-  --new-color1:whitesmoke;
+  --new-color: rgb(223, 107, 107);
+  --new-color1: whitesmoke;
 
 }
 
@@ -1025,8 +1047,9 @@ hr {
 
 #abtus .aboutus h1 {
   text-align: center;
-  margin:  auto;
+  margin: auto;
 }
+
 #abtus .aboutus h1 span {
   font-size: 4.5rem;
   /* color: rgb(124, 5, 5); */
@@ -1034,11 +1057,13 @@ hr {
   padding: 5px 5px;
   font-family: "Roboto";
 }
-hr{
+
+hr {
   margin-left: 100px;
   margin-right: 100px;
 }
-.abt_text{
+
+.abt_text {
   display: flex;
   margin: 0px 5%;
   margin-bottom: -60px;
@@ -1046,50 +1071,56 @@ hr{
   color: var(--new-color1);
   width: 90%;
 }
-.cart_online{
+
+.cart_online {
   height: 270px;
   width: 40%;
   border: 1px solid white;
   border-radius: 20px;
 }
 
-.para_abt{
+.para_abt {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
-  line-height:24px ;
+  line-height: 24px;
   width: 60%;
 }
 
-@media(max-width:430px){
-  .abt_text{
+@media(max-width:430px) {
+  .abt_text {
     flex-direction: column-reverse;
     justify-content: center;
     align-content: space-around;
     align-items: center;
+  }
+
+  .cart_online {
+    width: 100%;
+  }
+
+  .para_abt {
+
+    font-size: 15px;
+    width: 80%;
+  }
 }
-.cart_online{
-  width: 100%;
-}
-.para_abt{
-  
-  font-size: 15px;
-  width: 80%;
-}
-}
-@media(max-width:768px){
-  .abt_text{
+
+@media(max-width:768px) {
+  .abt_text {
     flex-direction: column-reverse;
     justify-content: center;
     align-content: space-around;
     align-items: center;
-}
-.cart_online{
-  width: 70%;
-}
-.para_abt{
-  
-  font-size: 18px;
-  width: 80%;
-}
+  }
+
+  .cart_online {
+    width: 70%;
+  }
+
+  .para_abt {
+
+    font-size: 18px;
+    width: 80%;
+  }
 
 }
