--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--background-color4);
   color: var(--secondary-color1);
+  position: relative;
 }
 
 u {
@@ -686,6 +687,28 @@ u {
 
 #location iframe {
   margin-top: 3px;
+}
+
+/* Scroll back button */
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
 
 /* ......../ media query /.......... */
