--- a/cart.css
+++ b/cart.css
@@ -863,7 +863,8 @@ hr {
   background-color: #007bb6
 }
 
-/* Scroll back button design */
+/* Scroll back button */
+
 #myBtn {
   display: none;
   position: fixed;
@@ -877,11 +878,16 @@ hr {
   color: white;
   cursor: pointer;
   padding: 15px;
-  border-radius: 4px;
+  border-radius: 50%;
+}
+
+.fas {
+  color: #fff;
 }
 
 #myBtn:hover {
   background-color: #555;
+  color: #fff !important;
 }
 
 /* End */
