--- a/cart.css
+++ b/cart.css
@@ -8,6 +8,10 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .html {
   font-size: 62.5%;
 }
@@ -874,20 +878,20 @@ hr {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: red;
+  background-color: black;
   color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 50%;
 }
 
-.fas {
-  color: #fff;
+.myBtn1 {
+  color: #000000 !important;
+  background-color: #fff !important;
 }
 
-#myBtn:hover {
-  background-color: #555;
-  color: #fff !important;
+.fas1 {
+  color: black;
 }
 
 /* End */
