"feat: adding button hover  effect #76"

--- a/cart.css
+++ b/cart.css
@@ -57,6 +57,11 @@ u {
   background: #117964;
   transition: background 0.3s ease-in-out;
 }
+.btn-primary:hover {
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  transition: all 0.3s ease-in-out;
+}
 
 /* ............/navbar/............ *
 
